--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="TextViewList">
         <item name="android:textSize">@dimen/size_item</item>
         <item name="android:padding">@dimen/padding_item</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">center</item>
     </style>
 
 </resources>
